--- a/online-code-compiler/code-compiler/package.json
+++ b/online-code-compiler/code-compiler/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-select": "^5.8.0"
