Co-authored-by: Anthony McLamb <admclamb@users.noreply.github.com>

--- a/online-code-compiler/code-compiler/package.json
+++ b/online-code-compiler/code-compiler/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.6.0",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@uiw/codemirror-theme-monokai": "^4.23.0",
+    "@uiw/react-codemirror": "4.23.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
