--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@uiw/codemirror-theme-monokai": "^4.23.0",
-    "@uiw/react-codemirror": "4.23.0",
+    "@uiw/codemirror-themes": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
